--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,16 @@ jobs:
         name: bitchat-apk
         path: app/build/outputs/apk/debug/app-debug.apk
         retention-days: 30
+
+    - name: Upload build logs
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-logs
+        path: |
+          **/build/reports/
+          **/build/outputs/logs/
+          **/build/test-results/
         
   security-scan:
     runs-on: ubuntu-latest
@@ -54,3 +64,13 @@ jobs:
     - uses: actions/checkout@v4
     - name: Run Android Lint Security Scan  
       run: ./gradlew lintDebug
+
+    - name: Upload build logs
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-scan-logs
+        path: |
+          **/build/reports/
+          **/build/outputs/logs/
+          **/build/test-results/
