--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Permissions for TOR and Network Access -->
+    <!-- TOR & Network Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.
                     
@@ -28,11 +28,24 @@
                         WAKE LOCK
                     
                 " />
+    
+    <!-- P2P & Bluetooth Permissions -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        BLUETOOTH ADMIN
+                    
+                " />
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        ACCESS FINE LOCATION
+                    
+                " />
 
     <application
         android:allowBackup="false"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
