--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TOR & Network Permissions -->
+    <!-- NETWORK & TOR PERMISSIONS -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.
                     
@@ -29,7 +29,7 @@
                     
                 " />
     
-    <!-- P2P & Bluetooth Permissions -->
+    <!-- P2P & BLUETOOTH PERMISSIONS FOR MESH NETWORKING -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.
                     
@@ -43,6 +43,33 @@
                         ACCESS FINE LOCATION
                     
                 " />
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        ACCESS COARSE LOCATION
+                    
+                " />
+    
+    <!-- MESSAGING & NOTIFICATION PERMISSIONS -->
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        READ CONTACTS
+                    
+                " />
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        WRITE CONTACTS
+                    
+                " />
+    <uses-permission android:name="android.permission.
+                    
+                        ƒ
+                        RECEIVE BOOT COMPLETED
+                    
+                " />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="false"
@@ -52,19 +79,61 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SecurePrivateMessenger"
         android:name=".BaseApplication"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="false"
         tools:targetApi="31">
         
+        <!-- BITCHAT MAIN ACTIVITY -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.SecurePrivateMessenger.NoActionBar">
+            android:theme="@style/Theme.SecurePrivateMessenger.NoActionBar"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
+        <!-- BITCHAT SERVICE CONFIGURATION -->
+        <service
+            android:name=".service.SyncNotificationReceiver"
+            android:exported="false" />
+        
+        <receiver
+            android:name=".receiver.SystemNotificationReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.
+                    
+                        ƒ
+                        BOOT COMPLETED
+                    
+                " />
+                <action android:name="android.intent.action.
+                    
+                        ƒ
+                        MY PACKAGE REPLACED
+                    
+                " />
+                <action android:name="android.intent.action.
+                    
+                        ƒ
+                        PACKAGE REPLACED
+                    
+                " />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+        
+        <!-- PROVIDER FOR DATABASE -->
+        <provider
+            android:name=".provider.BriarProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true" />
+
     </application>
 
 </manifest>
-
